--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@
                                                         <img src="images\Calender.png"/>
                                                         <p>Calender</p>
                                                         </div>
-                                                        <div class="img-p">
+                                                        <!--<div class="img-p">
                                                             <img src="images\chatgpt.png"/>
                                                             <p>Chatgpt</p>
-                                                            </div>
+                                                            </div>-->
                                                         
 
         </div>
@@ -192,7 +192,7 @@
         <img src="images\Folder.png"/>
         <img src="images\netflix.png"/>
         <img src="images\ms 365.png"/>
-        <img src="images\powerpoint.jpeg"/>
+        <img src="images\chatgpt.png"/>
         <img src="images\Spotify.png"/>
         <img src="images\whatsapp.png"/>
         <img src="images\mail.png"/>
